--- a/php-stored-xss/index.yaml
+++ b/php-stored-xss/index.yaml
@@ -18,9 +18,14 @@ text:
     - title: 修正
       file: text/step5.md
 files:
+    - www/auth.php
+    - www/authFunction.php
+    - www/common.php
     - www/index.php
-    - www/template_index.php
+    - www/input.php
+    - www/logout.php
     - www/next.php
+    - www/template_auth_index.php
+    - www/template_noAuth_index.php
+    - www/template_input.php
     - www/template_next.php
-    - www/submit.php
-    - www/template_submit.php
