--- a/php-insufficient-authentication-authorization/index.yaml
+++ b/php-insufficient-authentication-authorization/index.yaml
@@ -13,8 +13,10 @@ text:
       file: text/step2.md
     - title: 対策方法と修正方法
       file: text/step3.md
-    - title: 留意点
+    - title: URLに埋め込まれた認証/認可情報の解説
       file: text/step4.md
+    - title: URLに埋め込まれた認証/認可情報の対策
+      file: text/step5.md
 files:
     - www/auth.php
     - www/authFunction.php
