--- a/php-sessionFixation/index.yaml
+++ b/php-sessionFixation/index.yaml
@@ -7,25 +7,27 @@ tag:
     - php
     - xss
 text:
-    - title: XSS概要
+    - title: セッションに関わる脆弱性の概要
       file: text/step1.md
-    - title: 悪用例
+    - title: 脆弱性の悪用
       file: text/step2.md
-    - title: 根本的対策
+    - title: 対策方法の解説
       file: text/step3.md
-    - title: PHPにおける対策
+    - title: 実際の対策方法
       file: text/step4.md
-    - title: 修正
+    - title: 修正方法の例
       file: text/step5.md
 files:
     - www/auth.php
     - www/authFunction.php
     - www/common.php
     - www/index.php
-    - www/input.php
     - www/logout.php
-    - www/next.php
+    - www/product.php
+    - www/shopping.php
+    - www/user.php
     - www/template_auth_index.php
     - www/template_noAuth_index.php
-    - www/template_input.php
-    - www/template_next.php
+    - www/template_product.php
+    - www/template_shopping.php
+    - www/template_user.php
