--- a/php-ssrf/index.yaml
+++ b/php-ssrf/index.yaml
@@ -1,16 +1,21 @@
 vaersion: 1
-title: タイトル
-description: 演習の概要説明
+title: PHPにおけるSSRFの対策
+description: PHPにおけるSSRFの対策について学びます
 difficulty: beginner
 language: php
 tag:
     - php
-    - xss
-    - sqli
+    - ssrf
 text:
-    - title: ページ1
+    - title: 概要
       file: text/step1.md
-    - title: ページ2
+    - title: 攻撃方法
       file: text/step2.md
+    - title: 防御策
+      file: text/step3.md
+    - title: 演習
+      file: text/step4.md
 files:
-    - www/index.php
+    - www/settings.php
+    - www/post.php
+    - www/webhook.php
