nginx-http-header-injection: apply @mrtc0's suggestion on returning content
Co-Authored-By: jj1bdx <jj1bdx@users.noreply.github.com>

--- a/nginx-http-header-injection/nginx/nginx.conf
+++ b/nginx-http-header-injection/nginx/nginx.conf
@@ -33,7 +33,7 @@ http {
         location ~ /v1/((?<action>[^.]*)\.json)?$ {
             # inject received content
             add_header X-Action $action;
-            return 200 "OK";
+            return 200 '{"comment": "This is v1 endpoint.", "url": "http://example.com"}';
         }
 
     }
