--- a/php-dom-based-xss/nginx/nginx.conf
+++ b/php-dom-based-xss/nginx/nginx.conf
@@ -24,18 +24,7 @@ http {
 
         location / {
             root /var/www;
-            index index.php index.html index.htm;
-            try_files $uri $uri/ /index.php?q=$uri&$args;
-        }
-
-        location ~ \.php$ {
-            root /var/www/html;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass php-fpm:9000;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-            fastcgi_index index.php;
+            index index.html index.htm;
         }
     }
 }
