--- a/content-security-policy/index.yaml
+++ b/content-security-policy/index.yaml
@@ -6,11 +6,12 @@ language: php
 tag:
     - php
     - xss
+    - csp
 text:
     - title: 概要
       file: text/step1.md
     - title: 演習
-      file: text/step4.md
+      file: text/step2.md
 files:
     - www/index.php
     - www/template_index.php
