--- a/nginx-http-header-injection/docker-compose.yml
+++ b/nginx-http-header-injection/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
-    nginx:
-        image: "nginx:alpine"
-        volumes:
-            - "./www:/var/www"
-            - "./nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
-        ports:
-            - "80:80"
+  nginx:
+    build: .
+    volumes:
+      - "./www:/var/www"
+      - "./nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
+    ports:
+      - "80:80"
