--- a/php-reflected-xss-form/compose.yaml
+++ b/php-reflected-xss-form/compose.yaml
@@ -9,7 +9,7 @@ services:
             - "./postgresql.conf:/etc/postgresql/postgresql.conf"
             - "./postgres:/var/lib/postgresql/data"
         ports:
-            - "5432:5432"
+            - "5438:5432"
     php-fpm:
         build:
             context: "."
@@ -22,12 +22,13 @@ services:
             - "postgres"
         environment:
             DATABASE_HOST: postgres
+            DATABASE_PORT: 5438
     nginx:
         image: "nginx:alpine"
         volumes:
             - "./www:/var/www"
             - "./nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
         ports:
-            - "80:80"
+            - "8009:80"
         depends_on:
             - "php-fpm"
