--- a/php-ssrf/compose.yaml
+++ b/php-ssrf/compose.yaml
@@ -9,7 +9,7 @@ services:
             - "./postgresql.conf:/etc/postgresql/postgresql.conf"
             - "./postgres:/var/lib/postgresql/data"
         ports:
-            - "5432:5432"
+            - "5441:5432"
     customer:
         image: "nginx:alpine"
         volumes:
@@ -29,12 +29,13 @@ services:
             - "postgres"
         environment:
             DATABASE_HOST: postgres
+            DATABASE_PORT: 5441
     nginx:
         image: "nginx:alpine"
         volumes:
             - "./www:/var/www"
             - "./nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
         ports:
-            - "80:80"
+            - "8012:80"
         depends_on:
             - "php-fpm"
